--- a/waves/public/index.html
+++ b/waves/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <title>猫眼电影</title>
+    <title>美团</title>
     <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
     <script src="http://api.map.baidu.com/api?v=3.0&ak=AifO7fqcmB7rExXYEGN5YEn4v8PgkQ6z"></script>
     <script src="http://api.map.baidu.com/api?v=3.0&ak=PhwuZExAiuG2fu2hlf4NAcUpi4lBqMUD"></script>
